--- a/XWidget.ShoppingCart/XWidget.ShoppingCart.csproj
+++ b/XWidget.ShoppingCart/XWidget.ShoppingCart.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>netstandard2.0</TargetFramework>
@@ -7,11 +7,11 @@
   </PropertyGroup>
 
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
-    <DocumentationFile>G:\XWidget.ShoppingCart\XWidget.ShoppingCart\XWidget.ShoppingCart.xml</DocumentationFile>
+    <DocumentationFile>bin\Debug\netstandard2.0\XWidget.ShoppingCart.xml</DocumentationFile>
   </PropertyGroup>
 
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|AnyCPU'">
-    <DocumentationFile>G:\XWidget.ShoppingCart\XWidget.ShoppingCart\XWidget.ShoppingCart.xml</DocumentationFile>
+    <DocumentationFile>bin\Release\netstandard2.0\XWidget.ShoppingCart.xml</DocumentationFile>
   </PropertyGroup>
 
 </Project>
